# task4variant2

./: CMakeLists.txt  Readme.md  main.cpp
modules/scripts/: module1.cpp  module2.cpp  module3.cpp  module4.cpp
